--- a/Página de vendas/index.html
+++ b/Página de vendas/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3df637a2f2.js" crossorigin="anonymous"></script>
-    <title>PizzaShop | Crislaine Luana</title>
+    <title>luxo Automovel| Crislaine Luana</title>
 </head>
 <body>
     <header>
             <div class="content">
                 <div class="logo">
-                    <img src="./img/pngtree-cartoon-yellow-pizza-illustration-png-image_4634672-removebg-preview.png" alt="Cupcake">
-                    <h3>PizzaShop</h3>
+                    <img src="/home/escola/Downloads/logo.jpg" alt="Cupcake">
+                    <h3>luxo Automovel</h3>
                 </div>
                 <ul class="list-menu">
                     <li><a href="#home">Home</a></li>
@@ -39,8 +39,8 @@
     <section class="first-section" id="home">
         
         <div class="conteudo-principal">
-            <h1>Deixe seu dia mais saboroso!!!</h1>
-            <h2>As pizzas mais recheadas da Região</h2>
+            <h1>Transforme seu dia com o luxo que você merece</h1>
+            <h2>os carros mais luxuosos</h2>
             <div class="btn">
                 <button class="reservar">Reserve a sua!</button>
                 <button class="montar">Montar a sua pizza!</button>
@@ -184,3 +184,62 @@
     <script src="./script.js"></script>
 </body>
 </html>
+index.html
+Exibindo index.html…
+Template front-end
+VALDINEI APARECIDO DA SILVA CHAVES
+•
+26 de ago. (editado: 28 de ago.)
+100 pontos
+Data de entrega: 30 de out.
+Segue um template de um site com html, css e Javascript. Prazo de entrega 30 de outubro/2015. prazo final (recuperação) 06/novembro/2025.
+
+script.js
+JavaScript
+
+index.html
+HTML
+
+style.css
+CSS
+
+gif7.gif
+Imagem
+
+gif8.gif
+Imagem
+
+gif9.gif
+Imagem
+
+gif10.gif
+Imagem
+
+457-4572678_free-png-pizza-png-png-image-with-transparent-removebg-preview.png
+Imagem
+
+calabresa-removebg-preview.png
+Imagem
+
+cardapio.jpg
+Imagem
+
+chocolate-removebg-preview.png
+Imagem
+
+confete-removebg-preview.png
+Imagem
+
+cozinha.jpg
+Imagem
+
+frango-removebg-preview.png
+Imagem
+
+fundopizza.jpg
+Imagem
+
+prestigio-removebg-preview.png
+Imagem
+
+sensacao-removebg-pre
