--- a/Página de vendas/index.html
+++ b/Página de vendas/index.html
@@ -69,7 +69,7 @@
 
             <div class="itens-cardapio">
                 <div class="frango">
-                    <img src="./img/frango-removebg-preview.png" alt="frango">
+                    <img src="./img/carrovermelho.jpg" alt="frango">
                     <div class="info">
                         <h3>Frango</h3>
                         <h4>6 fatias <span>R$35,00</span></h4>
@@ -79,7 +79,7 @@
                     </div>   
                 </div>
                 <div class="calabresa">
-                    <img src="./img/calabresa-removebg-preview.png" alt="calabresa">
+                    <img src="./img/brasilia.webp" alt="calabresa">
                     <div class="info">
                         <h3>Calabresa</h3>
                         <h4>6 fatias <span>R$35,00</span></h4>
@@ -90,7 +90,7 @@
                 
                 </div>
                 <div class="portuguesa">
-                    <img src="./img/portuguesa-removebg-preview.png" alt="portuguesa">
+                    <img src="./img/fuscaverde.jpg" alt="portuguesa">
                     <div class="info">
                         <h3>Portuguesa</h3>
                         <h4>6 fatias <span>R$35,00</span></h4>
@@ -100,10 +100,10 @@
                     </div> 
                 
                 </div>
-                <div class="strogonoff">
-                    <img src="./img/strogonoff-removebg-preview.png" alt="strogonoff">
+                <div class="shrek à parmesiana">
+                    <img src="./img/shrekrebaixado.jpg" alt="shrek à parmesiana">
                     <div class="info">
-                        <h3>Strogonoff</h3>
+                        <h3>shrek à parmesiana</h3>
                         <h4>6 fatias <span>R$35,00</span></h4>
                         <h4>8 fatias <span>R$45,00</span></h4>
                         <h4>12 fatias <span>R$55,00</span></h4>
